Refatorando página Home

--- a/style.css
+++ b/style.css
@@ -1,9 +1,36 @@
-body {
-    
+header {
+    background: #BBBBBB;
+    padding: 20px 0;
 }
 
-.titulo-principal {
-    padding-left: 20px;
+.caixa {
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
+}
+
+nav {
+    position: absolute;
+    top: 110px;
+    right: 0;
+}
+
+nav li {
+    display: inline;
+    margin: 0 0 0 15px;
+}
+
+nav a {
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
+
+nav a:hover {
+    color: #C78C19;
+    text-decoration: underline;
 }
 
 .principal {
@@ -35,7 +62,7 @@ em strong {
     text-align: center;
 }
 
-ul {
+.beneficios-lista {
     display: inline-block;
     vertical-align: top;
     width: 20%;
