--- a/style.css
+++ b/style.css
@@ -7,6 +7,25 @@ header {
     padding: 20px 0;
 }
 
+.formulario form {
+    width: 940px;
+    margin: 20px auto;
+    padding: 10px;
+}
+
+.formulario table {
+    margin: 20px auto;
+}
+
+.formulario form fieldset select {
+    padding: 5px 10px;
+    font-size: 16px;
+}
+
+input[type="radio"] {
+    margin-right: 10px;
+}
+
 .caixa {
     position: relative;
     width: 940px;
@@ -85,17 +104,13 @@ nav a:hover {
 footer {
     text-align: center;
     background: url("bg.jpg");
+    padding: 40px 0;
 }
 
 .copyright {
     color: #FFFFFF;
     font-size: 13px;
     margin: 20px 0 0;
-}
-
-main {
-    width: 940px;
-    margin: 0 auto;
 }
 
 form {
@@ -106,14 +121,15 @@ form label,
 form legend {
     display: block;
     font-size: 20px;
-    margin: 0 0 10px;
+    margin: 0 0 16px;
 }
 
 .input-padrao {
     display: block;
     margin: 0 0 20px;
     padding: 10px 25px;
-    width: 50%;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .checkbox {
@@ -131,6 +147,8 @@ form legend {
     border-radius: 5px;
     transition: 1s all;
     cursor: pointer;
+    margin: 0 auto;
+    display: block;
 }
 
 .enviar:hover {
@@ -166,6 +184,13 @@ th {
     clear: left;
 }
 
+.principal {
+    padding: 3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0 auto;
+}
+
 .principal p {
     margin: 0 0 1em;
 }
@@ -184,12 +209,9 @@ th {
     margin: 0 20px 20px 0;
 }
 
-.imagembeneficios {
-    width: 60%;
-}
-
 .mapa {
     padding: 3em 0;
+    background: linear-gradient(#FEFEFE, #888888);
 }
 
 .mapa p {
@@ -197,7 +219,91 @@ th {
     text-align: center;
 }
 
+.mapa-conteudo {
+    width: 940px;
+    margin: 0 auto;
+}
+
+.beneficios {
+    padding: 3em 0;
+    background: #888888;
+}
+
+.conteudo-beneficios {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-beneficios {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.itens {
+    line-height: 1.5;
+}
+
+.itens:before {
+    content: "★";
+}
+
+.itens:first-child {
+    font-weight: bold;
+}
+
+.imagem-beneficios {
+    width: 60%;
+    opacity: 1;
+    transition: 400ms;
+    box-shadow: 10px 10px 10px 0 #000000;
+}
+
+.imagem-beneficios:hover {
+    opacity: 0.3;
+}
+
 .video {
     width: 560px;
-    margin: 1em auto;
+    margin: 2em auto;
+}
+
+@media screen and (max-width: 480px) {
+
+    .caixa,
+    .principal,
+    .conteudo-beneficios,
+    .mapa-conteudo,
+    .video {
+        width: auto;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+    }
+
+    .lista-beneficios,
+    .imagem-beneficios,
+    .enviar,
+    .formulario form {
+        width: 100%;
+    }
+
+    .produtos {
+        width: 100%;
+        margin: 0 auto;
+        padding: 50px 10px;
+        box-sizing: border-box;
+    }
+
+    .produtos li {
+        display: block;
+        width: 100%;
+        box-sizing: border-box;
+        margin: 0 0 10px 0;
+    }
 }
